    Google Talk or anything else that has a Jabber transport).
  - 'cruise start' starts dashboard in production environment. Use 'cruise start -e development' for development.
  - builder plugins receive build_broken and build_fixed events when build status goes from green to red and vice versa
  - [bugfix] Debug-level messages are logged in development mode
  - [bugfix] Running builder doesn't block the dashboard on Windows
  - [bugfix] Test Failure Parser correctly parses failure messages from Mocha
  - [bugfix] Removal project_config.rb is now detected, resulting in reloading of the project and a forced build.  
------------------------------------------------------------------------------------------------------------------------
* 0.4.0
  - pretty user interface
  - 'Build now' button
  - dashboard displays projects as panels, not table rows
  - monitoring cruisecontrol.rb builds with CCTray.net
  - browser autorefresh - seeing latest build status without hitting 'refresh' on browser
  - builder's current activity (down/sleeping/checking for modifications/building) on the dashboard
  - builder plugin may be packaged as a directory with multiple files. It must have init.rb then.
  - plugin error handler: if a plugin raises an error in response to notification, builder logs the error, 
    notifies all other plugins, then raises an error of its own (thus triggering the build_loop_failed event)
  - improved error handling during builder initialization
  - Bugfix: blocked spaces in project names
------------------------------------------------------------------------------------------------------------------------
* 0.3.0
  - builder is building 'cruise', 'test' or 'default' target, depending on what is defined in the project
  - when build is running, OS variable CC_BUILD_ARTIFACTS is pointing to the build artifacts directory
  - customizable Rake task and build command
  - customizable polling interval